--- a/src/app/pages/pending/pending.component.html
+++ b/src/app/pages/pending/pending.component.html
@@ -1,3 +1,59 @@
-<p>
-  pending works!
-</p>
+<block-ui>
+  <div class="box box-primary">
+    <div class="box-body">
+
+      <span id="responseText"></span>
+      <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Customer</th>
+            <th>Cust ID</th>
+            <th>Customer Mobile</th>
+            <th>Item</th>
+            <th>Delivery Option</th>
+            <th>Date approved</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of data; let i = index" title={{item.id}}>
+            <td>{{i+1}}</td>
+            <td>{{item.customer_names}}</td>
+            <td>{{item.customer_id_number}}</td>
+            <td>{{item.customer_phone_number}}</td>
+            <td>{{item.item_description}}</td>
+            <td>{{item.pick_up_type}}</td>
+            <td>{{item.approved_at}}</td>
+            <td>{{item.status}}</td>
+
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+</block-ui>
+
+<!--
+approved_amount: "35000.0"
+buying_price: "25000.0"
+created_at: "2019-04-03T16:48:08.404Z"
+created_by: null
+customer_email: "test@dummy111.com"
+customer_id_number: "32150682"
+customer_names: "Jackson Doe"
+customer_phone_number: "725958640"
+id: "48af6006-02c5-4821-b43e-3c1b3f2b75db"
+item: null
+item_description: "television sony black"
+item_type: "television sony black"
+pick_up_option: "pickup"
+pick_up_type: "store_pickup"
+sales_agent: null
+source_id: "jkiarie"
+status: "pending"
+store: "jkiarie"
+string: null
+updated_at: "2019-04-03T16:48:08.404Z"
+-->
