--- a/src/app/pages/released/released.component.html
+++ b/src/app/pages/released/released.component.html
@@ -1,102 +1,59 @@
-<div class="box box-primary">
-    
+<block-ui>
+  <div class="box box-primary">
     <div class="box-body">
-        <span id="responseText"></span>
-        <table class="table table-striped" id="releasetable">
-        	<thead>
-                <tr class="header">                    
-                    <th>Customer Name</th>
-                    <th>Id Number</th>
-                    <th>Item(s)</th>
-                    <th>Amount Approved</th>
-                    <th>Status</th>
-                     <th>Time Applied</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                
-                    <tr class="">
-                    <td>Jackson Kiarie</td>
-                    <td>9876543</td>
-                    <td>Dining Table</td>
-                    <td>KES 25,000</td>
-                    <td>Released</td>
-                    <td>12 Jan 2019 10.08 AM</td>
-                    <td>
-                        <button type="button" class="btn btn-xs btn-primary" onclick="editTask(1)">    <i class="fa fa-eye"></i>                    
-                        </button>  
-                    </td>
-                </tr>
-                <tr class="">
-                    <td>Purity Maina</td>
-                    <td>10293847</td>
-                    <td>Bean Bag</td>
-                    <td>KES 35,000</td>
-                    <td>Released</td>
-                    <td>25 Jan 2019 10.08 AM</td>
-                    <td>
-                        <button type="button" class="btn btn-xs btn-primary" onclick="editTask(1)">    <i class="fa fa-eye"></i>                    
-                        </button>  
-                    </td>
-                </tr>
-                 <tr class="">
-                    <td>Titus Kivite</td>
-                    <td>3492882</td>
-                    <td>Samsung TV</td>
-                    <td>KES 25,000</td>
-                    <td>Released</td>
-                    <td>19 Jan 2019 12.08 PM</td>
-                    <td>
-                        <button type="button" class="btn btn-xs btn-primary" onclick="editTask(1)">    <i class="fa fa-eye"></i>                    
-                        </button>  
-                    </td>
-                </tr>
-                 <tr class="">
-                    <td>Jackson Kiarie</td>
-                    <td>9876543</td>
-                    <td>Dining Table</td>
-                    <td>KES 25,000</td>
-                    <td>Released</td>
-                    <td>12 Jan 2019 10.08 AM</td>
-                    <td>
-                        <button type="button" class="btn btn-xs btn-primary" onclick="editTask(1)">    <i class="fa fa-eye"></i>                    
-                        </button>  
-                    </td>
-                </tr>
-                <tr class="">
-                    <td>Purity Maina</td>
-                    <td>10293847</td>
-                    <td>Bean Bag</td>
-                    <td>KES 35,000</td>
-                    <td>Released</td>
-                    <td>25 Jan 2019 10.08 AM</td>
-                    <td>
-                        <button type="button" class="btn btn-xs btn-primary" onclick="editTask(1)">    <i class="fa fa-eye"></i>                    
-                        </button>  
-                    </td>
-                </tr>
-                 <tr class="">
-                    <td>Titus Kivite</td>
-                    <td>3492882</td>
-                    <td>Samsung TV</td>
-                    <td>KES 25,000</td>
-                    <td>Released</td>
-                    <td>19 Jan 2019 12.08 PM</td>
-                    <td>
-                        <button type="button" class="btn btn-xs btn-primary" onclick="editTask(1)">    <i class="fa fa-eye"></i>                    
-                        </button>  
-                    </td>
-                </tr>
-            </tbody>
-         </table>
-    </div>
-</div>
 
- <script>
-    $(document).ready(function() {
-        $('.table').dataTable().fnDestroy();
-        $('#releasetable').DataTable();
-        $('#releasetable_length').html('<p class="page-title">Released Items</p>');
-    } );
-    </script>
+      <span id="responseText"></span>
+      <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Customer</th>
+            <th>Cust ID</th>
+            <th>Customer Mobile</th>
+            <th>Item</th>
+            <th>Delivery Option</th>
+            <th>Date approved</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of data; let i = index" title={{item.id}}>
+            <td>{{i+1}}</td>
+            <td>{{item.customer_names}}</td>
+            <td>{{item.customer_id_number}}</td>
+            <td>{{item.customer_phone_number}}</td>
+            <td>{{item.item_description}}</td>
+            <td>{{item.pick_up_type}}</td>
+            <td>{{item.approved_at}}</td>
+            <td>{{item.status}}</td>
+
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+</block-ui>
+
+<!--
+approved_amount: "35000.0"
+buying_price: "25000.0"
+created_at: "2019-04-03T16:48:08.404Z"
+created_by: null
+customer_email: "test@dummy111.com"
+customer_id_number: "32150682"
+customer_names: "Jackson Doe"
+customer_phone_number: "725958640"
+id: "48af6006-02c5-4821-b43e-3c1b3f2b75db"
+item: null
+item_description: "television sony black"
+item_type: "television sony black"
+pick_up_option: "pickup"
+pick_up_type: "store_pickup"
+sales_agent: null
+source_id: "jkiarie"
+status: "pending"
+store: "jkiarie"
+string: null
+updated_at: "2019-04-03T16:48:08.404Z"
+-->
