--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -1,6 +1,11 @@
 <block-ui>
   <div class="box box-primary">
     <div class="box-body">
+      <div class="widget-controls">
+        <a class="btn btn-info btn-sm mb-1" (click)="downloadApps()"><i class="fa fa-download"></i> Update Sales
+          List</a>
+
+      </div>
 
       <span id="responseText"></span>
       <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
