--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -17,7 +17,7 @@
             <th>Customer Mobile</th>
             <th>Item</th>
             <th>Delivery Option</th>
-            <th>Date approved</th>
+            <th>Store</th>
             <th>Status</th>
           </tr>
         </thead>
@@ -28,8 +28,8 @@
             <td>{{item.customer_id_number}}</td>
             <td>{{item.customer_phone_number}}</td>
             <td>{{item.item_description}}</td>
-            <td>{{item.pick_up_type}}</td>
-            <td>{{item.approved_at}}</td>
+            <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
+            <td>{{item.store}}</td>
             <td>{{item.status}}</td>
 
           </tr>
