--- a/src/app/pages/partners/update/update.component.html
+++ b/src/app/pages/partners/update/update.component.html
@@ -160,6 +160,84 @@
                 </div>
               </div>
 
+              <div class="row form-group">
+                <label class="control-label col-sm-3" for="title"><span class="float-right"> Year of Incorporation:
+                  </span></label>
+                <div class="col-sm-7">
+                  <input type="number" formControlName="orgYearsOfOperation" class="form-control"
+                    [ngClass]="{ 'is-invalid': submitted && f.orgYearsOfOperation.errors }" />
+                  <div *ngIf="submitted && f.orgYearsOfOperation.errors" class="invalid-feedback">
+                    <div *ngIf="f.orgYearsOfOperation.errors.required">Year of Incorporation is required</div>
+                  </div>
+                  <small class="text-danger"
+                    *ngIf="beFormAdd.get('orgYearsOfOperation').touched && beFormAdd.get('orgYearsOfOperation').hasError('required')">Year
+                    of Incorporation is required</small>
+
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <label class="control-label col-sm-3" for="title"><span class="float-right"> Number of Branches:
+                  </span></label>
+                <div class="col-sm-7">
+                  <input type="number" formControlName="numberOfBranches" class="form-control"
+                    [ngClass]="{ 'is-invalid': submitted && f.numberOfBranches.errors }" />
+                  <div *ngIf="submitted && f.numberOfBranches.errors" class="invalid-feedback">
+                    <div *ngIf="f.numberOfBranches.errors.required">Year of Incorporation is required</div>
+                  </div>
+                  <small class="text-danger"
+                    *ngIf="beFormAdd.get('numberOfBranches').touched && beFormAdd.get('numberOfBranches').hasError('required')">Number
+                    of branches is a required field</small>
+
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <label class="control-label col-sm-3" for="title"><span class="float-right"> Payment Terms:
+                  </span></label>
+                <div class="col-sm-7">
+                  <select formControlName="paymentTerms" class="form-control validation-field">
+                    <option value="Cash">Cash</option>
+                    <option value="Credit">Credit</option>
+
+                  </select>
+                  <small class="text-danger"
+                    *ngIf="beFormAdd.get('paymentTerms').touched && beFormAdd.get('paymentTerms').hasError('required')">Payment
+                    Terms
+                    is required</small>
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <label class="control-label col-sm-3" for="title"><span class="float-right"> Credit Duration In Days:
+                  </span></label>
+                <div class="col-sm-7">
+                  <input type="number" formControlName="creditDurationInDays" class="form-control"
+                    [ngClass]="{ 'is-invalid': submitted && f.creditDurationInDays.errors }" />
+                  <div *ngIf="submitted && f.creditDurationInDays.errors" class="invalid-feedback">
+                    <div *ngIf="f.creditDurationInDays.errors.required">Credit duration is required</div>
+                  </div>
+                  <small class="text-danger"
+                    *ngIf="beFormAdd.get('creditDurationInDays').touched && beFormAdd.get('creditDurationInDays').hasError('required')">Number
+                    of branches is a required field</small>
+
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <label class="control-label col-sm-3" for="title"><span class="float-right"> Account Manager:
+                  </span></label>
+                <div class="col-sm-7">
+                  <select formControlName="accountManager" class="form-control validation-field">
+                    <option value="">Select Account Manager</option>
+                    <option *ngFor="let o of UserOptions" [ngValue]="o.id">{{o.firstname + ' ' + o.lastname}}</option>
+                  </select>
+                  <small class="text-danger"
+                    *ngIf="beFormAdd.get('accountManager').touched && beFormAdd.get('accountManager').hasError('required')">Account
+                    Manager is required</small>
+                </div>
+              </div>
+
 
 
               <div class="row form-group">
