--- a/src/app/pages/change-password/change-password.component.html
+++ b/src/app/pages/change-password/change-password.component.html
@@ -15,29 +15,24 @@
 
             <form autocomplete="off" [formGroup]="form" (ngSubmit)="onSubmit(form)" class="text-left mt-4">
               <fieldset>
-
-                <div class="form-group">
-                  <label><b>Password Rules</b></label>
-                  <blockquote class="card-bodyquote" style="">
-                    <div style="height: 50px; overflow-y: scroll;">
-                      <ul>
-                        <li *ngFor="let item of passwordList">{{item}}</li>
-                      </ul>
-                    </div>
-                  </blockquote>
-
-                </div>
                 <div class="form-group">
                   <label>Password</label>
                   <input formControlName="password" class="form-control validation-field" placeholder="New Password"
                     type="password">
                   <password-strength-meter [password]="password.value" [enableFeedback]="true"
                     (strengthChange)="onPasswordStrengthChanged($event)"></password-strength-meter>
-                  <small id="passwordHelpBlock" class="form-text text-muted">
+                  <!--   <small id="passwordHelpBlock" class="form-text text-muted">
                     Your password must be 8-20 characters long, contain letters and numbers, and must not contain
                     spaces, special characters,
                     or emoji.
-                  </small>
+                  </small> -->
+                  <blockquote class="card-bodyquote" style="">
+                    <div style="height: 50px; overflow-y: scroll;">
+                      Your password must be 8-20 characters long, contain letters and numbers, and must not contain
+                      spaces, special characters,
+                      or emoji.
+                    </div>
+                  </blockquote>
                   <div class="invalid-feedback">
                     Please provide a valid Password.
                   </div>
@@ -55,7 +50,7 @@
                     *ngIf="form.get('passwordRepeat').touched && form.get('passwordRepeat').hasError('mismatchedPasswords')">Passwords
                     do not match</small>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <label for="inputContacts">Security Question</label>
                   <select formControlName="securityQuestion" class="form-control validation-field">
                     <option *ngFor="let o of securityQuestionsList" [ngValue]="o.id">{{o.question}}</option>
@@ -71,7 +66,7 @@
                   <small class="text-danger"
                     *ngIf="form.get('securityQuestionAnswer').touched && form.get('securityQuestionAnswer').hasError('required')">Security
                     Question Answer is required</small>
-                </div>
+                </div> -->
                 <div class="form-group">
                   <button [disabled]="form.invalid" class="btn btn-block btn-primary" type="submit">Change
                     Password</button>
