--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -1,8 +1,8 @@
 <block-ui>
   <div class="container">
     <div class="row">
-      <div class="col-md-4"></div>
-      <div class="col-md-4">
+      <div class="col-md-3"></div>
+      <div class="col-md-5">
         <div class="login-panel panel panel-default" style="border-color: #0d98ba;">
           <div class="panel-heading" con>
             <img src="./assets/logo.png" alt="Login Image">
@@ -10,19 +10,44 @@
           </div>
           <div class="panel-body" *ngIf="!fsubmitted && !fsubmittedwitherrors">
 
-            <h3>Change Password</h3>
+            <h3>Forgot Password</h3>
             <form autocomplete="off" [formGroup]="form" (ngSubmit)="onSubmit(form)" class="text-left mt-4">
               <fieldset>
+                <p>
+                  We will send you a verification code on your registered mobile number
+                </p>
                 <div class="form-group">
-                  <label>Email</label>
-                  <input formControlName="userName" class="form-control validation-field" placeholder="User Name"
+                  <label> Email</label>
+
+                  <input formControlName="userName" class="form-control validation-field" placeholder="Email Address"
                     type="text">
                   <small class="text-danger"
                     *ngIf="form.get('userName').touched && form.get('userName').hasError('required')">Username is
                     required</small>
                 </div>
 
-                <div class="form-group">
+                <p *ngIf="rsubmitted">
+                  A verification code has been sent to {{userMobileNumber}}. Input it below to complete the forgot
+                  password request.
+                </p>
+
+                <div class="form-group" *ngIf="!rsubmitted">
+                  <button class="btn btn-block btn-primary" (click)="getVerificationCode(form)">Get Code</button>
+                </div>
+                <div class="form-group" *ngIf="rsubmitted">
+                  <label> Verification Code </label>
+
+                  <input formControlName="forgotPasswordCode" class="form-control validation-field"
+                    placeholder="Verification Code" type="text">
+                  <small class="text-danger"
+                    *ngIf="form.get('forgotPasswordCode').touched && form.get('forgotPasswordCode').hasError('required')">Code
+                    is
+                    required</small>
+
+
+                </div>
+
+                <!-- <div class="form-group">
                   <label for="inputContacts">Security Question</label>
                   <select formControlName="securityQuestion" class="form-control validation-field">
                     <option *ngFor="let o of securityQuestionsList" [ngValue]="o.id">{{o.question}}</option>
@@ -38,9 +63,9 @@
                   <small class="text-danger"
                     *ngIf="form.get('securityQuestionAnswer').touched && form.get('securityQuestionAnswer').hasError('required')">Security
                     Question Answer is required</small>
-                </div>
+                </div> -->
 
-                <div class="form-group">
+                <div class="form-group" *ngIf="rsubmitted">
                   <button [disabled]="!form.valid" class="btn btn-block btn-primary" type="submit">Change
                     Password</button>
                 </div>
@@ -50,7 +75,7 @@
 
           <div class="panel-body" *ngIf="fsubmittedwitherrors">
 
-            <h3>Change Password</h3>
+            <h3>Forgot Password</h3>
 
             <div class="alert alert-md alert-danger">
               We could not find a user with search credentials. You can try again.
@@ -67,7 +92,7 @@
           </div>
           <div class="panel-body" *ngIf="fsubmitted">
 
-            <h3>Change Password</h3>
+            <h3>Forgot Password</h3>
 
             <div class="alert alert-md alert-success">
               The Request has been submitted successfully. You will receive an email notification with
