--- a/src/app/pages/collections/collections.component.html
+++ b/src/app/pages/collections/collections.component.html
@@ -1,93 +1,68 @@
-<div class="box box-primary">
-	<div class="panel-heading panel-primary row">
-		<h2 class="panel-title col-sm-10 col-sm-offset-2"></h2>
-	</div>
-	<div class="box-body">
-		<span id="responseText"></span>
-		<div id ="cccform">
-			<form class="form-horizontal"  name="cccform" onsubmit="return sendData();" role="form" method="POST" title=""	enctype="multipart/form-data" style="display: block;">
-				<div class="row form-group">
-					<label class="control-label col-sm-3" for="title">Customer Id Number:</label>
-					<div class="col-sm-4">
-						<input type="text" name="idnumber" id="idnumber" class="form-control required"  maxlength="255" placeholder="enter customer id number">
-					</div>
-					<div class="col-sm-2">
-						<button type="button" name="request" value="Request" onclick="requestCollectionCode()" class="btn-primary btn-sm btn-info ">Request Code</button>
-					</div>
-				</div>
+<block-ui>
+  <div class="box box-primary">
+    <div class="box-body">
+      <div class="widget-controls">
+        <a class="btn btn-info btn-sm mb-1" routerLink="/collections/create"><i class="fa fa-user"></i> Customer
+          Pickup</a>
+        &nbsp;&nbsp;&nbsp;
+        <a class="btn btn-info btn-sm mb-1" routerLink="/collections/lipalater"><i class="fa fa-shopping-cart"></i>
+          Lipalater
+          Pickup</a>
 
-				<div class="row form-group untilCodeisReceived ccc" style="display: none">
-					<label class="control-label col-sm-3" for="title">Collection Code:</label>
-					<div class="col-sm-4" title="enter customer collection code received on customer's phone">
-						<input type="text" name="ccc" id="ccc" class="form-control required"  maxlength="255" placeholder="enter customer collection code received on customer's phone">
-					</div>
-					<div class="col-sm-2">
-						<button type="button" name="request" value="Confirm" onclick="confirmCollectionCode()" class="btn-primary btn-sm btn-info ">Confirm Code</button>
-					</div>
-				</div>
+      </div>
 
-				<div class="row form-group untilCodeisReceived response" style="display: none">
-					<label class="control-label col-sm-3" for="description">Confirmation Response:</label>
-					<div class="col-sm-4">
-						<span id="confirmation_response"></span>
-					</div>
-					</div>
+      <span id="responseText"></span>
+      <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Customer</th>
+            <th>Cust ID</th>
+            <th>Customer Mobile</th>
+            <th>Item</th>
+            <th>Delivery Option</th>
+            <th>Store</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of data; let i = index" title={{item.id}}>
+            <td>{{i+1}}</td>
+            <td>{{item.customer_names}}</td>
+            <td>{{item.customer_id_number}}</td>
+            <td>{{item.customer_phone_number}}</td>
+            <td>{{item.item_description}}</td>
+            <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
+            <td>{{item.store}}</td>
+            <td>{{item.status}}</td>
 
-					<div class="row form-group untilCodeisReceived" style="display: none" >
-						<label class="control-label col-sm-3" for="DOB">Customer:</label>
-						<div class="col-sm-4">
-							<span id="confirmation_customer"></span> 
-						</div>
-				</div>
-				<div class="row form-group untilCodeisReceived" style="display: none" >
-					<label class="control-label col-sm-3" for="DOB">Item(s):</label>
-					<div class="col-sm-4">
-						<span id="confirmation_item"></span>
-					</div>
-				</div>
+          </tr>
+        </tbody>
+      </table>
 
-				<div class="row form-group untilCodeisReceived" style="display: none" >
-					<label class="control-label col-sm-3" for="DOB">Approved Amount:</label>
-					<div class="col-sm-4">
-						<span id="confirmation_approvedamount"></span>
-					</div>
-				</div>
+    </div>
+  </div>
+</block-ui>
 
-				<div class="row form-group untilCodeisReceived" style="display: none">
-					<label class="control-label col-sm-3" for="title">Item identification:</label>
-					<div class="col-sm-4">
-						<input type="text" name="itemid" id="itemid" class="form-control required"  maxlength="255" placeholder="enter item id/serial number">
-					</div>                                        
-				</div>
-
-				<div class="row form-group untilCodeisReceived" style="display: none">
-					<label class="control-label col-sm-3" for="title">Dispatch Notes:</label>
-					<div class="col-sm-4">
-						<textarea name="notes" id="notes" class="form-control required"  maxlength="255" placeholder="enter dispatch notes"></textarea> 
-					</div>
-
-				</div>
-
-				<div class="row form-group untilCodeisReceived" style="display: none">
-					<label class="control-label col-sm-3" for="email"></label>
-					<div class="col-sm-7">
-
-						<input type="button" onclick="sendData()" value="Save" class="btn-primary btn-sm btn-success ">
-						<button type="button" name="cancel" value="Cancel" onclick="closeForm()" class="btn-primary btn-sm btn-danger ">Cancel</button>
-					<input type="hidden" name="cell" />
-					</div>
-				</div>
-
-				<div class="row form-group ">
-					<label class="control-label col-sm-3" for="email">Sample Results</label>
-					<div class="col-sm-7">                                       
-						<input type="button" onclick="toggleValid('3HGRET4BB')" value="Valid" class="btn-sm btn-success ">
-						<button type="button" name="cancel" value="Cancel" onclick="toggleInvalid()" class="btn-sm btn-danger ">Invalid</button>
-						<input type="hidden" name="cell" />
-					</div>
-				</div>
-			
-			</form>
-		</div>
-	</div>
-</div>
+<!--
+  approved_amount: "35000.0"
+  buying_price: "25000.0"
+  created_at: "2019-04-03T16:48:08.404Z"
+  created_by: null
+  customer_email: "test@dummy111.com"
+  customer_id_number: "32150682"
+  customer_names: "Jackson Doe"
+  customer_phone_number: "725958640"
+  id: "48af6006-02c5-4821-b43e-3c1b3f2b75db"
+  item: null
+  item_description: "television sony black"
+  item_type: "television sony black"
+  pick_up_option: "pickup"
+  pick_up_type: "store_pickup"
+  sales_agent: null
+  source_id: "jkiarie"
+  status: "pending"
+  store: "jkiarie"
+  string: null
+  updated_at: "2019-04-03T16:48:08.404Z"
+  -->
